# srclib-haskell

./: .gitignore  .gitmodules  .travis.yml  DATA_SKETCH  Dockerfile  MachDeps.h  README.md  Srclibtoolchain  TODO  cabal.config  process-all-dependencies.hs  process-all-dependencies.sh  srclib-haskell.cabal
include/: ghcautoconf.h  ghcplatform.h
include/rts/: Signals.h
src/: Cabal.hs  Examples.hs  Haddock.hs  Imports.hs  Locations.hs  Main.hs  Resolve.hs  Srclib.hs  Symbols.hs  Test.hs  Types.hs
src/Language/Haskell/: Preprocess.hs
src/Language/Haskell/Preprocess/: Macros.hs
srclib-haddock/: .gitignore  CHANGES  ghc.mk  srclib-haddock.cabal
srclib-haddock/driver/: Main.hs
srclib-haddock/html-test/ref/: AdvanceTypes.html
srclib-haddock/srclib-haddock-api/: srclib-haddock-api.cabal
srclib-haddock/srclib-haddock-api/src/: Haddock.hs
srclib-haddock/srclib-haddock-api/src/Haddock/: InterfaceFile.hs  Options.hs  Types.hs  Version.hs
srclib-haddock/srclib-haddock-api/src/Haddock/Interface/: Create.hs
srclib-haddock/srclib-haddock-library/: srclib-haddock-library.cabal
testdata/expected/docker/deepseq/deepseq/: HaskellPackage.depresolve.json  HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/docker/dlist/dlist/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/docker/haskell-hello-world/haskell-hello-world/: HaskellPackage.depresolve.json  HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/docker/haskell-module-import/haskell-hello-world/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/docker/haskell-simple-tests/haskell-hello-world/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/docker/haskell-simple-tests/haskell-simple-tests/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/deepseq/deepseq/: HaskellPackage.depresolve.json  HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/dlist/dlist/: HaskellPackage.depresolve.json  HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/haskell-cpp-tests/haskell-simple-tests/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/haskell-hello-world/haskell-hello-world/: HaskellPackage.depresolve.json  HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/haskell-hello-world/haskell-hello-world.cabal/: HaskellPackage.unit.json
testdata/expected/program/haskell-module-import/haskell-hello-world/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/haskell-simple-tests/haskell-hello-world/: HaskellPackage.depresolve.json  HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/haskell-simple-tests/haskell-simple-tests/: HaskellPackage.graph.json  HaskellPackage.unit.json
testdata/expected/program/tiny-test-repo-with-readme/myunit/: HaskellPackage.depresolve.json  HaskellPackage.unit.json
