name:                srclib-haskell
version:             0.1.0.0
synopsis:            srclib backend for Haskell
description:         Haskell source analysis for Sourcegraph's srclib tool.
homepage:            http://github.com/sourcegraph/srclib-haskell
license:             MIT
license-file:        LICENSE
author:              Sourcegraph, Inc.
maintainer:          benjaminsummers1987@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable srclib-haskell
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson
               ,       base>=4.7 && <4.8
               ,       base-unicode-symbols
               ,       bytestring
               ,       Cabal
               ,       classy-prelude
               ,       containers
               ,       derive
               ,       directory
               ,       filemanip
               ,       ghc
               ,       hackage-db
               ,       haddock
               ,       haskell-src-exts
               ,       mtl
               ,       pathtype
               ,       process
               ,       QuickCheck
               ,       regex-tdfa
               ,       shelly
               ,       split
               ,       system-filepath
               ,       text
               ,       unix
               ,       here
