name:                srclib-haskell
version:             0.1.0.0
synopsis:            srclib backend for Haskell
description:         Haskell source analysis for Sourcegraph's srclib tool.
homepage:            http://github.com/sourcegraph/srclib-haskell
license:             MIT
license-file:        LICENSE
author:              Sourcegraph, Inc.
maintainer:          benjaminsummers1987@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable srclib-haskell
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O0
  default-language:    Haskell2010
  build-depends:       aeson
               ,       base>=4.7 && <4.8
               ,       base-unicode-symbols
               ,       basic-prelude
               ,       bimap
               ,       bytestring
               ,       Cabal
               ,       classy-prelude
               ,       containers
               ,       cpphs
               ,       deepseq
               ,       derive
               ,       directory
               ,       file-embed
               ,       filemanip
               ,       foldl
               ,       ghc
               ,       hackage-db
               ,       haskell-names
               ,       haskell-packages
               ,       haskell-src-exts==1.16.0.1
               ,       here
               ,       mtl
               ,       pathtype
               ,       preprocess-haskell
               ,       pretty-show
               ,       process
               ,       QuickCheck
               ,       regex-tdfa
               ,       shelly
               ,       split
               ,       syb
               ,       syb
               ,       system-filepath
               ,       temporary
               ,       text
               ,       turtle
               ,       unix
               ,       vector
               ,       deepseq
               ,       deepseq-generics
